fixes button spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -330,3 +330,7 @@ thead, tbody, tfoot {
     padding: 20px 25px;
     margin-top: 30px;
 }
+
+.logged-in {
+  margin-right: .25rem;
+}
